fix awkward gradient cutoff on homepage in dar kmode (#47)

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -58,16 +58,16 @@
   .bg-gradient-dark {
     background: linear-gradient(
         90deg,
-        rgba(0, 0, 0, 0) 0%,
-        rgba(0, 0, 0, 0.75) 50%,
-        rgba(0, 0, 0, 0) 100%
+        rgba(17, 17, 17, 0) 0%,
+        rgba(17, 17, 17, 0.75) 50%,
+        rgba(17, 17, 17, 0) 100%
       ),
       linear-gradient(
         180deg,
-        #000 0%,
-        rgba(0, 0, 0, 0) 40%,
-        rgba(0, 0, 0, 0) 60%,
-        #000 100%
+        #111 0%,
+        rgba(17, 17, 17, 0) 40%,
+        rgba(17, 17, 17, 0) 60%,
+        #111 100%
       ),
       linear-gradient(
         270deg,
